<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".metodos.Registrar">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackground"
        android:text="@string/aceptar"
        android:id="@+id/button"
        android:background="@drawable/button_shape_accent"
        android:onClick="aceptar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="63dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackground"
        android:text="@string/cancelar"
        android:id="@+id/button2"
        android:background="@drawable/button_shape"
        android:onClick="cancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edNombreRegistro"
        android:hint="@string/nombre"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edApellidosRegistro"
        android:hint="@string/apellidos"
        android:layout_below="@+id/edNombreRegistro"
        android:layout_alignRight="@+id/edNombreRegistro"
        android:layout_alignEnd="@+id/edNombreRegistro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edEmailRegistro"
        android:hint="@string/email"
        android:layout_below="@+id/edApellidosRegistro"
        android:layout_alignLeft="@+id/edPassRegistro"
        android:layout_alignStart="@+id/edPassRegistro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edPassRegistro"
        android:hint="@string/contraseña"
        android:layout_below="@+id/edEmailRegistro"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edConfirmPassRegistro"
        android:hint="@string/confirmaContraseña"
        android:layout_below="@+id/edPassRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edTelefonoRegistro"
        android:hint="@string/telefono"
        android:layout_below="@+id/edConfirmPassRegistro"
        android:layout_alignLeft="@+id/edFechaNacRegistro"
        android:layout_alignStart="@+id/edFechaNacRegistro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edFechaNacRegistro"
        android:hint="@string/fechaNacimiento"
        android:layout_below="@+id/edTelefonoRegistro"
        android:layout_alignRight="@+id/edConfirmPassRegistro"
        android:layout_alignEnd="@+id/edConfirmPassRegistro" />
</RelativeLayout>
