<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chrno.proyecto_final.MainActivity"
    android:orientation="vertical"
    android:rowCount="4"
    android:columnCount="25">

    <EditText
        android:id="@+id/edEmail"
        style="@style/Login_Username"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPass"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:hint="@string/contraseña"
        android:password="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackground"
        android:text="@string/login"
        android:id="@+id/button"
        android:background="@drawable/button_shape_accent"
        android:onClick="login"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackground"
        android:text="@string/registrar"
        android:id="@+id/button2"
        android:background="@drawable/button_shape"
        android:onClick="registrar"
        android:layout_marginTop="20dp" />

    <!--<Button-->
        <!--android:id="@+id/scan_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Scan"/>-->
        <!--<TextView-->
            <!--android:id="@+id/scan_format"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:text="New Text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/scan_button"/>-->
        <!--<TextView-->
            <!--android:id="@+id/scan_content"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:text="New Text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/scan_format"/>-->


</LinearLayout>
