<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chrno.proyecto_final.metodos.FormAddWish"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="513dp"
                android:layout_height="match_parent"
                android:id="@+id/ivWishPhoto"
                android:src="@android:mipmap/sym_def_app_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:src="#87ffffff" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etWishTitle"
                    style="@style/Login_Username"
                    android:hint="@string/wishName" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/etWishPrice"
                        android:hint="@string/wishPrice"
                        style="@style/Login_Username"
                        android:paddingTop="10dp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkPrivate"
                        android:textSize="20dp"
                        android:id="@+id/cbWishPrivate"
                        android:checked="true"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spWishlistSpiner"
                        android:layout_weight="1" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spCategorySpinner"
                        android:layout_weight="1" />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etWishDescription"
                    style="@style/Login_Username"
                    android:hint="@string/wishAnotation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/wishLevel"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_vertical" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbWishRating"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:id="@+id/button4"
                        android:background="@drawable/button_shape"
                        android:textColor="@color/colorBackground"
                        android:layout_weight="1"
                        android:onClick="cancelWish" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saveWish"
                        android:id="@+id/button3"
                        android:background="@drawable/button_shape_accent"
                        android:textColor="@color/colorBackground"
                        android:layout_weight="1"
                        android:onClick="saveWish" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</LinearLayout>
