<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorBackground"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivFotoUsuario"
                android:layout_margin="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/imageView9"
                android:src="#afffffff"
                android:layout_gravity="left|bottom"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tvNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:layout_gravity="left|bottom"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/tvUserStatus"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/btCrearDeseo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addDeseo"
                android:onClick="addDeseo"
                android:background="@drawable/button_nav_drawer"
                android:gravity="left|center"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/btCrearLista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addListaDeseo"
                android:onClick="addListaDeseo"
                android:background="@drawable/button_nav_drawer"
                android:gravity="left|center"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/btAjustes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ajustes"
                android:onClick="ajustes"
                android:background="@drawable/button_nav_drawer"
                android:gravity="left|center"
                android:paddingLeft="10dp" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.ContentFrameLayout>
